--- a/templates/base.html
+++ b/templates/base.html
@@ -26,8 +26,8 @@
 
   {% block corejs %}
   <script src="https://kit.fontawesome.com/75fa94fb6a.js" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
@@ -105,6 +105,29 @@
         </ul>
       </div>
     </div>
+
+    <div class="row bg-white">
+      <nav class="navbar navbar-expand-lg navbar-light w-100">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+          aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Mobile nav -->
+        <ul class="navbar-nav d-lg-none flex-row list-unstyled w-100 justify-content-around my-2">
+          {% include 'includes/mobile-top-header.html' %}
+        </ul>
+
+        <!-- Main nav -->
+        {% include 'includes/main-nav.html' %}
+      </nav>
+    </div>
+
+    <div id="delivery-banner" class="row text-center">
+      <div class="col bg-black text-white">
+        <h4 class="logo-font my-1">Free delivery on orders over ${{ free_shipping_threshold }}!</h4>
+      </div>
+    </div>
   </header>
 
   {% if messages %}
@@ -123,3 +146,4 @@
 </body>
 
 </html>
+
