--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -26,17 +26,18 @@
                     {% endif %}
                 </div>
             </div>
+
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5">
                     <p class="mb-0">{{ product.name }}</p>
                     <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
 
                     {% if product.category %}
-                    <p class="small mt-1 mb-0">
-                        <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
-                            <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
-                        </a>
-                    </p>
+                        <p class="small mt-1 mb-0">
+                            <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
+                                <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                            </a>
+                        </p>
                     {% endif %}
 
                     {% if product.rating %}
@@ -50,24 +51,53 @@
                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
-                            <div class="col-12">
-                                <p class="mt-3"><strong>Quantity:</strong></p>
-                                <div class="form-group w-50">
-                                    <div class="input-group">
-                                        <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                            {% with product.has_sizes as s %}
+                                {% if s %}
+                                    <div class="col-12">
+                                        <p><strong>Select Option:</strong></p>
+                                        <select class="form-control rounded-0 w-50" name="product_size" id="id_product_size" required>
+                                            {% if product.variant_type == "drill" %}
+                                                <option value="12V">12V</option>
+                                                <option value="18V">18V</option>
+                                                <option value="20V">20V</option>
+                                            {% elif product.variant_type == "hammer" %}
+                                                <option value="14oz">14oz</option>
+                                                <option value="19oz">19oz</option>
+                                                <option value="24oz">24oz</option>
+                                            {% elif product.variant_type == "saw" %}
+                                                <option value="110V">110V</option>
+                                                <option value="230V">230V</option>
+                                            {% elif product.variant_type == "sander" %}
+                                                <option value="120V">120V</option>
+                                                <option value="240V">240V</option>
+                                            {% else %}
+                                                <option disabled selected>No options available</option>
+                                            {% endif %}
+                                        </select>
+                                    </div>
+                                {% endif %}
+
+                                <div class="col-12">
+                                    <p class="mt-3"><strong>Quantity:</strong></p>
+                                    <div class="form-group w-50">
+                                        <div class="input-group">
+                                            <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-12">
-                                <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
-                                    <span class="icon">
-                                        <i class="fas fa-chevron-left"></i>
-                                    </span>
-                                    <span class="text-uppercase">Keep Shopping</span>
-                                </a>
-                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
-                            </div>
-                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+
+                                <div class="col{% if s %}-12 mt-2{% endif %}">
+                                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                                        <span class="icon">
+                                            <i class="fas fa-chevron-left"></i>
+                                        </span>
+                                        <span class="text-uppercase">Keep Shopping</span>
+                                    </a>
+                                    <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                                </div>
+
+                                <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                            {% endwith %}
                         </div>
                     </form>
                 </div>
