--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -35,6 +35,16 @@
     border: 1px solid #000;
 }
 
+select, 
+select option {
+    color: #000000;
+}
+
+select:invalid,
+select option[value=""] {
+    color: #aab7c4 !important;
+}
+
 /* Warrior Tools themed loading overlay */
 #loading-overlay {
     display: none;
