--- a/templates/base.html
+++ b/templates/base.html
@@ -4,15 +4,13 @@
 <html lang="en">
 
 <head>
-
   {% block meta %}
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   {% endblock %}
 
-  {% block extra_meta %}
-  {% endblock %}
+  {% block extra_meta %}{% endblock %}
 
   {% block corecss %}
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -21,8 +19,7 @@
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
   {% endblock %}
 
-  {% block extra_css %}
-  {% endblock %}
+  {% block extra_css %}{% endblock %}
 
   {% block corejs %}
   <script src="https://kit.fontawesome.com/75fa94fb6a.js" crossorigin="anonymous"></script>
@@ -34,11 +31,10 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
-    <script src="https://js.stripe.com/v3/"></script>
+  <script src="https://js.stripe.com/v3/"></script>
   {% endblock %}
 
-  {% block extra_js %}
-  {% endblock %}
+  {% block extra_js %}{% endblock %}
 
   <title>Warrior Tools {% block extra_title %}{% endblock %}</title>
 </head>
@@ -54,13 +50,10 @@
       <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
         <form method="GET" action="{% url 'products' %}">
           <div class="input-group w-100">
-            <input class="form-control border border-black rounded-0" type="text" name="q"
-              placeholder="Search our site">
+            <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
             <div class="input-group-append">
               <button class="form-control btn btn-black border border-black rounded-0" type="submit">
-                <span class="icon">
-                  <i class="fas fa-search"></i>
-                </span>
+                <span class="icon"><i class="fas fa-search"></i></span>
               </button>
             </div>
           </div>
@@ -69,8 +62,7 @@
       <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
         <ul class="list-inline list-unstyled text-center text-lg-right my-0">
           <li class="list-inline-item dropdown">
-            <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false">
+            <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <div class="text-center">
                 <div><i class="fas fa-user fa-lg"></i></div>
                 <p class="my-0">My Account</p>
@@ -78,14 +70,14 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="user-options">
               {% if request.user.is_authenticated %}
-              {% if request.user.is_superuser %}
-              <a href="" class="dropdown-item">Product Management</a>
-              {% endif %}
-              <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-              <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                {% if request.user.is_superuser %}
+                  <a href="" class="dropdown-item">Product Management</a>
+                {% endif %}
+                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
               {% else %}
-              <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-              <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
               {% endif %}
             </div>
           </li>
@@ -132,35 +124,32 @@
   </header>
 
   {% if messages %}
-  <div class="message-container">
-    {% for message in messages %}
-      {% with message.level as level %}
-        {% if level == 40 %}
+    <div class="message-container">
+      {% for message in messages %}
+        {% with message.level as level %}
+          {% if level == 40 %}
             {% include 'includes/toasts/toast_error.html' %}
-        {% elif level == 30 %}
+          {% elif level == 30 %}
             {% include 'includes/toasts/toast_warning.html' %}
-        {% elif level == 25 %}
+          {% elif level == 25 %}
             {% include 'includes/toasts/toast_success.html' %}
-        {% else %}
+          {% else %}
             {% include 'includes/toasts/toast_info.html' %}
-        {% endif %}
-      {% endwith %}
-    {% endfor %}
-  </div>
+          {% endif %}
+        {% endwith %}
+      {% endfor %}
+    </div>
   {% endif %}
 
-  {% block page_header %}
-  {% endblock %}
-
-  {% block content %}
-  {% endblock %}
+  {% block page_header %}{% endblock %}
+  {% block content %}{% endblock %}
 
   {% block postloadjs %}
   <script type="text/javascript">
     $('.toast').toast('show');
+    $('.alert').alert();
   </script>
   {% endblock %}
-
 </body>
 
 </html>
