--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -51,64 +51,69 @@
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
-                        {% with product.has_sizes as s %}
-                            {% if s %}
-                                <div class="col-12">
-                                    <p><strong>Select Option:</strong></p>
-                                    <select class="form-control rounded-0 w-50" name="product_size" id="id_product_size" required>
-                                        {% if product.variant_type == "drill" %}
-                                            <option value="12V">12V</option>
-                                            <option value="18V">18V</option>
-                                            <option value="20V">20V</option>
-                                        {% elif product.variant_type == "hammer" %}
-                                            <option value="14oz">14oz</option>
-                                            <option value="19oz">19oz</option>
-                                            <option value="24oz">24oz</option>
-                                        {% elif product.variant_type == "saw" %}
-                                            <option value="110V">110V</option>
-                                            <option value="230V">230V</option>
-                                        {% elif product.variant_type == "sander" %}
-                                            <option value="120V">120V</option>
-                                            <option value="240V">240V</option>
-                                        {% else %}
-                                            <option disabled selected>No options available</option>
-                                        {% endif %}
-                                    </select>
-                                </div>
-                            {% endif %}
-
+                        {% if product.has_sizes %}
                             <div class="col-12">
-                                <p class="mt-3"><strong>Quantity:</strong></p>
-                                <div class="form-group w-50">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-black rounded-0"
-                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                                <span class="icon"><i class="fas fa-minus"></i></span>
-                                            </button>
-                                        </div>
-                                        <input class="form-control qty_input" type="number" name="quantity" value="1"
-                                            min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
-                                        <div class="input-group-append">
-                                            <button class="increment-qty btn btn-black rounded-0"
-                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                                <span class="icon"><i class="fas fa-plus"></i></span>
-                                            </button>
-                                        </div>
+                                <p><strong>Select Option:</strong></p>
+                                <select class="form-control rounded-0 w-50" name="product_size" id="id_product_size" required>
+                                    {% if product.variant_type == "sds_drill" or product.variant_type == "drill_driver" or product.variant_type == "impact_driver" %}
+                                        <option value="12V">12V</option>
+                                        <option value="18V">18V</option>
+                                        <option value="20V">20V</option>
+                                    {% elif product.variant_type == "hammer" %}
+                                        <option value="14oz">14oz</option>
+                                        <option value="19oz">19oz</option>
+                                        <option value="24oz">24oz</option>
+                                    {% elif product.variant_type == "circular_saw" or product.variant_type == "jigsaw" %}
+                                        <option value="110V">110V</option>
+                                        <option value="230V">230V</option>
+                                    {% elif product.variant_type == "orbital_sander" %}
+                                        <option value="120V">120V</option>
+                                        <option value="240V">240V</option>
+                                    {% elif product.variant_type == "tape_measure" %}
+                                        <option value="5m">5m</option>
+                                        <option value="8m">8m</option>
+                                        <option value="10m">10m</option>
+                                    {% elif product.variant_type == "hand_saw" %}
+                                        <option value="Fine Cut">Fine Cut</option>
+                                        <option value="Rip Cut">Rip Cut</option>
+                                    {% else %}
+                                        <option disabled selected>No size options defined for this tool type.</option>
+                                    {% endif %}
+                                </select>
+                            </div>
+                        {% endif %}
+
+                        <div class="col-12">
+                            <p class="mt-3"><strong>Quantity:</strong></p>
+                            <div class="form-group w-50">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <button class="decrement-qty btn btn-black rounded-0"
+                                            data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                            <span class="icon"><i class="fas fa-minus"></i></span>
+                                        </button>
+                                    </div>
+                                    <input class="form-control qty_input" type="number" name="quantity" value="1"
+                                           min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                    <div class="input-group-append">
+                                        <button class="increment-qty btn btn-black rounded-0"
+                                            data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                            <span class="icon"><i class="fas fa-plus"></i></span>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
+                        </div>
 
-                            <div class="col{% if s %}-12 mt-2{% endif %}">
-                                <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
-                                    <span class="icon"><i class="fas fa-chevron-left"></i></span>
-                                    <span class="text-uppercase">Keep Shopping</span>
-                                </a>
-                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
-                            </div>
+                        <div class="col-12 mt-2">
+                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                                <span class="icon"><i class="fas fa-chevron-left"></i></span>
+                                <span class="text-uppercase">Keep Shopping</span>
+                            </a>
+                            <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                        </div>
 
-                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                        {% endwith %}
+                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
                     </div>
                 </form>
             </div>
