--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -25,7 +25,13 @@
             <div class="col-12 col-md-6">
                 <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {{ form|crispy }}
+                    {% for field in form %}
+                        {% if field.name != 'image' %}
+                            {{ field|as_crispy_field }}
+                        {% else %}
+                            {{ field }}
+                        {% endif %}
+                    {% endfor %}
                     <div class="text-right">
                         <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
                         <button class="btn btn-black rounded-0" type="submit">Add Product</button>
@@ -37,34 +43,39 @@
 {% endblock %}
 
 {% block postloadjs %}
-    <script>
-            document.addEventListener("DOMContentLoaded", function () {
-        const variantField = document.getElementById("id_variant_type");
-        const hasSizesCheckbox = document.getElementById("id_has_sizes");
-        const hasSizesRow = hasSizesCheckbox.closest(".form-group") || hasSizesCheckbox.closest(".mb-3");
+    {{ block.super }}
+    <script type="text/javascript">
+        $('#new-image').change(function() {
+            var file = $('#new-image')[0].files[0];
+            $('#filename').text(`Image will be set to: ${file.name}`);
+        });
 
-        // List of variants that require sizes
-        const variantsWithSizes = {{ variant_options|safe }};
+        document.addEventListener("DOMContentLoaded", function () {
+            const variantField = document.getElementById("id_variant_type");
+            const hasSizesCheckbox = document.getElementById("id_has_sizes");
+            const hasSizesRow = hasSizesCheckbox.closest(".form-group") || hasSizesCheckbox.closest(".mb-3");
 
-        function toggleHasSizesField() {
-            const selected = variantField.value;
-            const shouldShow = variantsWithSizes.includes(selected);
+            // List of variants that require sizes (passed from context as JSON)
+            const variantsWithSizes = {{ variant_options|safe }};
 
-            if (shouldShow) {
-                hasSizesRow.style.display = "block";
-                hasSizesCheckbox.disabled = false;
-            } else {
-                hasSizesCheckbox.checked = false;
-                hasSizesCheckbox.disabled = true;
-                hasSizesRow.style.display = "none";
+            function toggleHasSizesField() {
+                const selected = variantField.value;
+                const shouldShow = variantsWithSizes.includes(selected);
+
+                if (shouldShow) {
+                    hasSizesRow.style.display = "block";
+                    hasSizesCheckbox.disabled = false;
+                } else {
+                    hasSizesCheckbox.checked = false;
+                    hasSizesCheckbox.disabled = true;
+                    hasSizesRow.style.display = "none";
+                }
             }
-        }
 
-        if (variantField && hasSizesCheckbox && hasSizesRow) {
-            toggleHasSizesField();
-            variantField.addEventListener("change", toggleHasSizesField);
-        }
-    }
-);
+            if (variantField && hasSizesCheckbox && hasSizesRow) {
+                toggleHasSizesField();
+                variantField.addEventListener("change", toggleHasSizesField);
+            }
+        });
     </script>
 {% endblock %}
