--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -34,13 +34,13 @@
             <div class="dropdown-menu border-0" aria-labelledby="hand-tools-link">
                 <a href="{% url 'products' %}?category=hammers" class="dropdown-item">Hammers & Striking Tools</a>
                 <a href="{% url 'products' %}?category=screwdrivers" class="dropdown-item">Screwdrivers</a>
-                <a href="{% url 'products' %}?category=wrenches" class="dropdown-item">Wrenches & Pliers</a>
+                <a href="{% url 'products' %}?category=wrenches_and_pliers" class="dropdown-item">Wrenches & Pliers</a>
                 <a href="{% url 'products' %}?category=chisels" class="dropdown-item">Chisels</a>
                 <a href="{% url 'products' %}?category=pipe_cutter" class="dropdown-item">Pipe Cutters</a>
                 <a href="{% url 'products' %}?category=spirit_level" class="dropdown-item">Spirit Levels</a>
                 <a href="{% url 'products' %}?category=tape_measure" class="dropdown-item">Tape Measures</a>
                 <a href="{% url 'products' %}?category=hand_saw" class="dropdown-item">Hand Saws</a>
-                <a href="{% url 'products' %}?category=hammers,screwdrivers,wrenches,chisels,pipe_cutter,spirit_level,tape_measure,hand_saw" class="dropdown-item font-weight-bold">All Hand Tools</a>
+                <a href="{% url 'products' %}?category=hammers,screwdrivers,wrenches_and_pliers,chisels,pipe_cutter,spirit_level,tape_measure,hand_saw" class="dropdown-item font-weight-bold">All Hand Tools</a>
             </div>
         </li>
     </ul>
