--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -3,16 +3,28 @@
 {% load i18n %}
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block body_class %}form-page{% endblock %}
 
-{% block inner_content %}
+{% block content %}
+<div class="content-wrapper">
+  <div class="form-container">
     <hr>
-    <h2 class="logo-font mb-4">{% trans "Change Password" %}</h2>
+    <h2 class="logo-font mb-4 text-uppercase">{% trans "Change Password" %}</h2>
     <hr>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
+    <form method="POST" action="{% url 'account_change_password' %}">
+      {% csrf_token %}
+      {{ form|crispy }}
+
+      <div class="d-flex flex-wrap justify-content-between align-items-center mt-4">
+        <a class="btn btn-outline-navy rounded-0 mb-2" href="{% url 'account_login' %}">
+          {% trans "Back to Login" %}
+        </a>
+        <button class="btn btn-navy rounded-0 mb-2" type="submit" name="action">
+          {% trans "Change Password" %}
+        </button>
+      </div>
     </form>
+  </div>
+</div>
 {% endblock %}
