--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,28 +1,22 @@
 {% extends "base.html" %}
-
 {% load static %}
 
-{% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
+{% block body_class %}home-page{% endblock %}
+
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/index.css' %}">
 {% endblock %}
 
-{% block content %}
-    <div class="container h-100">
-        <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
-                    Power Up with the Latest Tools
-                </h1>
-                <div class="my-5">
-                    <h4>
-                        <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
-                    </h4>
-                </div>
-            </div>
+{% block page_header %}
+<div class="container header-container">
+    <div class="row">
+        <div class="col text-center">
+            <h1 class="display-4 logo-font text-white mt-3">Welcome to Warrior Tools</h1>
+            <a href="{% url 'products' %}" class="btn btn-outline-light btn-lg mt-3 shop-now-button">
+                Shop Now
+            </a>
         </div>
     </div>
+</div>
 {% endblock %}
+
