--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
+{% block body_class %}product-detail-page{% endblock %}
+
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'products/css/products.css' %}">
 {% endblock %}
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container-fluid">
+
+<div class="container-fluid product-detail-content">
     <div class="row">
+        <!-- Product Image -->
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
             <div class="image-container my-5">
                 {% if product.image %}
@@ -27,34 +27,41 @@
             </div>
         </div>
 
+        <!-- Product Info -->
         <div class="col-12 col-md-6 col-lg-4">
             <div class="product-details-container mb-5 mt-md-5">
-                <p class="mb-0">{{ product.name }}</p>
-                <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
+                <p class="mb-0 product-name logo-font text-uppercase font-weight-bold">
+                    <i class="fas fa-screwdriver-wrench text-primary mr-2"></i>{{ product.name }}
+                </p>
+
+                <p class="lead mb-0 text-left font-weight-bold product-price">£{{ product.price }}</p>
 
                 {% if product.category %}
                     <p class="small mt-1 mb-0">
-                        <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
-                            <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
-                        </a>
+                        <i class="fas fa-tag text-muted mr-1"></i>{{ product.category.friendly_name }}
                     </p>
                 {% endif %}
 
                 {% if product.rating %}
-                    <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                    <small class="text-muted">
+                        <i class="fas fa-star text-warning mr-1"></i>{{ product.rating }} / 5
+                    </small>
                 {% else %}
-                    <small class="text-muted">No Rating</small>
+                    <small class="text-muted">
+                        <i class="fas fa-star text-muted mr-1"></i>No Rating
+                    </small>
                 {% endif %}
 
                 {% if request.user.is_superuser %}
                     <small class="ml-3">
-                        <a href="{% url 'edit_product' product.id %}">Edit</a> | 
+                        <a href="{% url 'edit_product' product.id %}">Edit</a> |
                         <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
                     </small>
                 {% endif %}
 
                 <p class="mt-3">{{ product.description }}</p>
 
+                <!-- Add to Bag Form -->
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
@@ -95,16 +102,16 @@
                             <div class="form-group w-50">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
-                                        <button class="decrement-qty btn btn-black rounded-0"
-                                            data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                        <button class="decrement-qty btn btn-sm btn-navy qty-button rounded-0"
+                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                             <span class="icon"><i class="fas fa-minus"></i></span>
                                         </button>
                                     </div>
                                     <input class="form-control qty_input" type="number" name="quantity" value="1"
                                            min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                                     <div class="input-group-append">
-                                        <button class="increment-qty btn btn-black rounded-0"
-                                            data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                        <button class="increment-qty btn btn-sm btn-navy qty-button rounded-0"
+                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
                                             <span class="icon"><i class="fas fa-plus"></i></span>
                                         </button>
                                     </div>
@@ -112,12 +119,15 @@
                             </div>
                         </div>
 
+                        <!-- Buttons -->
                         <div class="col-12 mt-2">
-                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                            <a href="{% url 'products' %}" class="btn btn-outline-navy rounded-0 mt-5">
                                 <span class="icon"><i class="fas fa-chevron-left"></i></span>
                                 <span class="text-uppercase">Keep Shopping</span>
                             </a>
-                            <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                            <button type="submit" class="btn btn-navy rounded-0 text-white text-uppercase mt-5">
+                                Add to Bag
+                            </button>
                         </div>
 
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
