--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -3,11 +3,16 @@
 {% load i18n %}
 
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
+{% block body_class %}form-page{% endblock %}
 
-{% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Account Inactive" %}</h2>
-<hr>
-
-<p>{% trans "This account is inactive." %}</p>
+{% block content %}
+<div class="content-wrapper">
+  <div class="form-container text-center">
+    <hr>
+    <h2 class="logo-font mb-4 text-uppercase">{% trans "Account Inactive" %}</h2>
+    <hr>
+    <p class="mt-3">{% trans "This account is inactive." %}</p>
+    <a href="{% url 'home' %}" class="btn btn-outline-navy rounded-0 mt-4">{% trans "Return Home" %}</a>
+  </div>
+</div>
 {% endblock %}
