--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,15 +1,23 @@
 {% extends "base.html" %}
+{% load static %}
+
+{% block body_class %}form-page{% endblock %}
+
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/account_pages.css' %}">
+{% endblock %}
 
 {% block content %}
-    <div class="container header-container">
-        <div class="overlay"></div>
-        <div class="row">
-            <div class="col-12 col-md-6">
-                <div class="allauth-form-inner-content">
-                    {% block inner_content %}
-                    {% endblock %}
-                </div>
+<div class="container header-container">
+    <div class="overlay"></div>
+
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-8 col-lg-6">
+            <div class="allauth-form-inner-content form-container">
+                {% block inner_content %}
+                {% endblock %}
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
