--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -4,30 +4,39 @@
 {% load account %}
 
 {% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
+{% block body_class %}form-page{% endblock %}
 
+{% block content %}
+<div class="content-wrapper">
+  <div class="form-container">
+    <hr>
+    <h2 class="logo-font mb-4 text-uppercase">{% trans "Confirm E-mail Address" %}</h2>
+    <hr>
 
-{% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Confirm E-mail Address" %}</h2>
-<hr>
+    {% if confirmation %}
+      {% user_display confirmation.email_address.user as user_display %}
 
-{% if confirmation %}
+      <p class="mb-4">
+        {% blocktrans with confirmation.email_address.email as email %}
+          Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.
+        {% endblocktrans %}
+      </p>
 
-{% user_display confirmation.email_address.user as user_display %}
+      <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-navy rounded-0">{% trans 'Confirm' %}</button>
+      </form>
 
-<p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
+    {% else %}
+      {% url 'account_email' as email_url %}
 
-<form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
-{% csrf_token %}
-    <button type="submit">{% trans 'Confirm' %}</button>
-</form>
-
-{% else %}
-
-{% url 'account_email' as email_url %}
-
-<p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
-
-{% endif %}
-
+      <p class="mb-3">
+        {% blocktrans %}
+          This e-mail confirmation link expired or is invalid.
+          Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.
+        {% endblocktrans %}
+      </p>
+    {% endif %}
+  </div>
+</div>
 {% endblock %}
