--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -3,21 +3,26 @@
 {% load i18n %}
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
+{% block body_class %}form-page{% endblock %}
 
-{% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Sign Out" %}</h2>
-<hr>
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+{% block content %}
+<div class="content-wrapper">
+  <div class="form-container">
+    <hr>
+    <h2 class="logo-font mb-4 text-uppercase">{% trans "Sign Out" %}</h2>
+    <hr>
+    <p class="mb-4">{% trans 'Are you sure you want to sign out?' %}</p>
 
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Cancel</a>
-  <button type="submit">{% trans 'Sign Out' %}</button>
-</form>
-
-
+    <form method="post" action="{% url 'account_logout' %}">
+      {% csrf_token %}
+      {% if redirect_field_value %}
+        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+      {% endif %}
+      <div class="d-flex flex-wrap justify-content-between align-items-center">
+        <a class="btn btn-outline-navy rounded-0 mb-2" href="{% url 'home' %}">{% trans "Cancel" %}</a>
+        <button class="btn btn-navy rounded-0 mb-2" type="submit">{% trans "Sign Out" %}</button>
+      </div>
+    </form>
+  </div>
+</div>
 {% endblock %}
