--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -4,24 +4,38 @@
 {% load account %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% block body_class %}form-page{% endblock %}
 
-{% block inner_content %}
+{% block content %}
+<div class="content-wrapper">
+  <div class="form-container">
+    <hr>
+    <h2 class="logo-font mb-4 text-uppercase">{% trans "Password Reset" %}</h2>
+    <hr>
 
-    <hr>
-    <h2 class="logo-font mb-4">{% trans "Password Reset" %}</h2>
-    <hr>
     {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
+      {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+    <p>
+      {% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}
+    </p>
 
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
+      {% csrf_token %}
+      {{ form|crispy }}
+
+      <div class="d-flex flex-wrap justify-content-between align-items-center mt-4">
+        <a class="btn btn-outline-navy rounded-0 mb-2" href="{% url 'account_login' %}">Back to Login</a>
+        <button type="submit" class="btn btn-navy rounded-0 mb-2">
+          {% trans 'Reset My Password' %}
+        </button>
+      </div>
     </form>
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    <p class="mt-3">
+      {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
+    </p>
+  </div>
+</div>
 {% endblock %}
