--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -4,15 +4,26 @@
 {% load account %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% block body_class %}form-page{% endblock %}
 
-{% block inner_content %}
+{% block content %}
+<div class="content-wrapper">
+  <div class="form-container text-center">
     <hr>
-    <h2 class="logo-font mb-4">{% trans "Password Reset" %}</h2>
+    <h2 class="logo-font mb-4 text-uppercase">{% trans "Password Reset" %}</h2>
     <hr>
-    
+
     {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
+      {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
-    
-    <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+
+    <p class="mt-3">
+      {% blocktrans %}
+        We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.
+      {% endblocktrans %}
+    </p>
+
+    <a class="btn btn-outline-navy rounded-0 mt-4" href="{% url 'account_login' %}">{% trans "Return to Login" %}</a>
+  </div>
+</div>
 {% endblock %}
