--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -2,25 +2,43 @@
 
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block body_class %}form-page{% endblock %}
 
-{% block inner_content %}
+{% block content %}
+<div class="content-wrapper">
+  <div class="form-container">
     <hr>
-    <h2 class="logo-font mb-4">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
+    <h2 class="logo-font mb-4 text-uppercase">
+      {% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}
+    </h2>
     <hr>
 
     {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
+      {% url 'account_reset_password' as passwd_reset_url %}
+      <p>
+        {% blocktrans %}
+          The password reset link was invalid, possibly because it has already been used.
+          Please request a <a class="text-info" href="{{ passwd_reset_url }}">new password reset</a>.
+        {% endblocktrans %}
+      </p>
     {% else %}
-        {% if form %}
-            <form method="POST" action="{{ action_url }}">
-                {% csrf_token %}
-                {{ form|crispy }}
-                <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
-                <input type="submit" name="action" value="{% trans 'change password' %}"/>
-            </form>
-        {% else %}
-            <p>{% trans 'Your password is now changed.' %}</p>
-        {% endif %}
+      {% if form %}
+        <form method="POST" action="{{ action_url }}">
+          {% csrf_token %}
+          {{ form|crispy }}
+
+          <div class="d-flex flex-wrap justify-content-between align-items-center mt-4">
+            <a class="btn btn-outline-navy rounded-0 mb-2" href="{% url 'account_login' %}">Back to Login</a>
+            <button type="submit" name="action" class="btn btn-navy rounded-0 mb-2">
+              {% trans 'Change Password' %}
+            </button>
+          </div>
+        </form>
+      {% else %}
+        <p>{% trans 'Your password is now changed.' %}</p>
+        <a class="btn btn-outline-navy rounded-0 mt-3" href="{% url 'account_login' %}">{% trans "Return to Login" %}</a>
+      {% endif %}
     {% endif %}
+  </div>
+</div>
 {% endblock %}
