--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -2,10 +2,18 @@
 
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block body_class %}form-page{% endblock %}
 
-{% block inner_content %}
+{% block content %}
+<div class="content-wrapper">
+  <div class="form-container text-center">
     <hr>
-    <h2 class="logo-font mb-4">{% trans "Change Password" %}</h2>
+    <h2 class="logo-font mb-4 text-uppercase">{% trans "Change Password" %}</h2>
     <hr>
-    <p>{% trans 'Your password is now changed.' %}</p>
+    <p class="mt-3">{% trans "Your password is now changed." %}</p>
+    <a href="{% url 'account_login' %}" class="btn btn-outline-navy rounded-0 mt-4">
+      {% trans "Return to Login" %}
+    </a>
+  </div>
+</div>
 {% endblock %}
