--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -3,15 +3,25 @@
 {% load i18n %}
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
+{% block body_class %}form-page{% endblock %}
 
-{% block inner_content %}
+{% block content %}
+<div class="content-wrapper">
+  <div class="form-container">
     <hr>
-    <h2 class="logo-font mb-4">{% trans "Set Password" %}</h2>
+    <h2 class="logo-font mb-4 text-uppercase">{% trans "Set Password" %}</h2>
     <hr>
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
+      {% csrf_token %}
+      {{ form|crispy }}
+
+      <div class="d-flex flex-wrap justify-content-end mt-4">
+        <button type="submit" name="action" class="btn btn-navy rounded-0">
+          {% trans 'Set Password' %}
+        </button>
+      </div>
     </form>
+  </div>
+</div>
 {% endblock %}
