--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -3,22 +3,38 @@
 {% load i18n %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
+{% block body_class %}form-page{% endblock %}
 
-{% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Sign Up" %}</h2>
-<hr>
+{% block content %}
+<div class="content-wrapper">
+  <div class="form-container">
+    <hr>
+    <h2 class="logo-font mb-4 text-uppercase">{% trans "Sign Up" %}</h2>
+    <hr>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+    <p>
+      {% blocktrans %}
+        Already have an account? Then please <a class="text-info" href="{{ login_url }}">sign in</a>.
+      {% endblocktrans %}
+    </p>
 
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form|crispy }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
-  <button type="submit">{% trans "Sign Up" %}</button>
-</form>
+    <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+      {% csrf_token %}
+      {{ form|crispy }}
 
+      {% if redirect_field_value %}
+        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+      {% endif %}
+
+      <div class="d-flex flex-wrap justify-content-between align-items-center mt-4">
+        <a class="btn btn-outline-navy rounded-0 mb-2" href="{% url 'account_login' %}">
+          {% trans "Back to Login" %}
+        </a>
+        <button class="btn btn-navy rounded-0 mb-2" type="submit">
+          {% trans "Sign Up" %}
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
 {% endblock %}
