--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -3,11 +3,16 @@
 {% load i18n %}
 
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
+{% block body_class %}form-page{% endblock %}
 
-{% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Sign Up Closed" %}</h2>
-<hr>
+{% block content %}
+<div class="content-wrapper">
+  <div class="form-container">
+    <hr>
+    <h2 class="logo-font mb-4 text-uppercase">{% trans "Sign Up Closed" %}</h2>
+    <hr>
 
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+    <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+  </div>
+</div>
 {% endblock %}
