--- a/templates/allauth/account/verification_sent.html
+++ b/templates/allauth/account/verification_sent.html
@@ -3,12 +3,26 @@
 {% load i18n %}
 
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
+{% block body_class %}form-page{% endblock %}
 
-{% block inner_content %}
+{% block content %}
+<div class="content-wrapper">
+  <div class="form-container text-center">
     <hr>
-    <h2 class="logo-font mb-4">{% trans "Verify Your E-mail Address" %}</h2>
+    <h2 class="logo-font mb-4 text-uppercase">{% trans "Verify Your E-mail Address" %}</h2>
     <hr>
 
-    <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
-
+    <p class="mt-3">
+      {% blocktrans %}
+        We have sent an e-mail to you for verification.
+        Follow the link provided to finalize the signup process.
+        Please contact us if you do not receive it within a few minutes.
+      {% endblocktrans %}
+    </p>
+    
+    <a class="btn btn-outline-navy rounded-0 mt-4" href="{% url 'account_login' %}">
+      {% trans "Return to Login" %}
+    </a>
+  </div>
+</div>
 {% endblock %}
