--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -3,23 +3,36 @@
 {% load i18n %}
 
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
+{% block body_class %}form-page{% endblock %}
 
-{% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Verify Your E-mail Address" %}</h2>
-<hr>
+{% block content %}
+<div class="content-wrapper">
+  <div class="form-container">
+    <hr>
+    <h2 class="logo-font mb-4 text-uppercase">{% trans "Verify Your E-mail Address" %}</h2>
+    <hr>
 
-{% url 'account_email' as email_url %}
+    {% url 'account_email' as email_url %}
 
-<p>{% blocktrans %}This part of the site requires us to verify that
-you are who you claim to be. For this purpose, we require that you
-verify ownership of your e-mail address. {% endblocktrans %}</p>
+    <p class="mb-3">
+      {% blocktrans %}
+        This part of the site requires us to verify that you are who you claim to be.
+        For this purpose, we require that you verify ownership of your e-mail address.
+      {% endblocktrans %}
+    </p>
 
-<p>{% blocktrans %}We have sent an e-mail to you for
-verification. Please click on the link inside this e-mail. Please
-contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+    <p class="mb-3">
+      {% blocktrans %}
+        We have sent an e-mail to you for verification. Please click on the link inside this e-mail.
+        Please contact us if you do not receive it within a few minutes.
+      {% endblocktrans %}
+    </p>
 
-<p>{% blocktrans %}<strong>Note:</strong> you can still <a href="{{ email_url }}">change your e-mail address</a>.{% endblocktrans %}</p>
-
-
+    <p>
+      {% blocktrans %}
+        <strong>Note:</strong> you can still <a class="text-info" href="{{ email_url }}">change your e-mail address</a>.
+      {% endblocktrans %}
+    </p>
+  </div>
+</div>
 {% endblock %}
