--- a/templates/base.html
+++ b/templates/base.html
@@ -1,70 +1,65 @@
 {% load static %}
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
   {% block meta %}
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
   {% endblock %}
 
   {% block extra_meta %}{% endblock %}
 
   {% block corecss %}
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
-  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <!-- Bootstrap + Fonts -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato|Oswald&display=swap">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/75fa94fb6a.js" crossorigin="anonymous"></script>
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
   {% endblock %}
 
   {% block extra_css %}{% endblock %}
 
   {% block corejs %}
-  <script src="https://kit.fontawesome.com/75fa94fb6a.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
-  <script src="https://js.stripe.com/v3/"></script>
+    <!-- Stripe -->
+    <script src="https://js.stripe.com/v3/"></script>
   {% endblock %}
-
-  {% block extra_js %}{% endblock %}
 
   <title>Warrior Tools {% block extra_title %}{% endblock %}</title>
 </head>
 
-<body>
+<body class="{% block body_class %}{% endblock %}">
   <header class="container-fluid fixed-top">
-    <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
-      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+    <!-- Top Header -->
+    <div class="row pt-lg-2 d-none d-lg-flex warrior-header">
+      <div class="col-12 col-lg-4 my-auto py-1 text-center text-lg-left">
         <a href="{% url 'home' %}" class="nav-link main-logo-link">
-          <h2 class="logo-font text-black my-0"><strong>Warrior</strong> Tools</h2>
+          <h2 class="logo-font my-0"><strong>Warrior</strong> Tools</h2>
         </a>
       </div>
-      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+
+      <div class="col-12 col-lg-4 my-auto py-1">
         <form method="GET" action="{% url 'products' %}">
           <div class="input-group w-100">
-            <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+            <input class="form-control search-input" type="text" name="q">
             <div class="input-group-append">
-              <button class="form-control btn btn-black border border-black rounded-0" type="submit">
-                <span class="icon"><i class="fas fa-search"></i></span>
+              <button class="btn search-button" type="submit">
+                <i class="fas fa-search"></i>
               </button>
             </div>
           </div>
         </form>
       </div>
-      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+
+      <div class="col-12 col-lg-4 my-auto py-1">
         <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+          <!-- My Account -->
           <li class="list-inline-item dropdown">
-            <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link text-light" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <div class="text-center">
-                <div><i class="fas fa-user fa-lg"></i></div>
+                <i class="fas fa-user fa-lg"></i>
                 <p class="my-0">My Account</p>
               </div>
             </a>
@@ -81,16 +76,14 @@
               {% endif %}
             </div>
           </li>
+
+          <!-- Cart -->
           <li class="list-inline-item">
-            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
+            <a class="nav-link cart-link" href="{% url 'view_bag' %}">
               <div class="text-center">
-                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                <p class="my-0">
-                  {% if grand_total %}
-                    £{{ grand_total|floatformat:2 }}
-                  {% else %}
-                    £0.00
-                  {% endif %}
+                <i class="fas fa-shopping-bag fa-lg"></i>
+                <p class="my-0 cart-total">
+                  {% if grand_total %}£{{ grand_total|floatformat:2 }}{% else %}£0.00{% endif %}
                 </p>
               </div>
             </a>
@@ -99,30 +92,28 @@
       </div>
     </div>
 
-    <div class="row bg-white">
-      <nav class="navbar navbar-expand-lg navbar-light w-100">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
-          aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+    <!-- Navigation -->
+    <div class="row warrior-header">
+      <nav class="navbar navbar-expand-lg navbar-dark w-100">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav">
           <span class="navbar-toggler-icon"></span>
         </button>
-
-        <!-- Mobile nav -->
-        <ul class="navbar-nav d-lg-none flex-row list-unstyled w-100 justify-content-around my-2">
+        <ul class="navbar-nav d-lg-none flex-row w-100 justify-content-around my-2">
           {% include 'includes/mobile-top-header.html' %}
         </ul>
-
-        <!-- Main nav -->
         {% include 'includes/main-nav.html' %}
       </nav>
     </div>
 
-    <div id="delivery-banner" class="row text-center">
-      <div class="col bg-black text-white">
-        <h4 class="logo-font my-1">Free delivery on orders over £{{ free_delivery_threshold }}!</h4>
+    <!-- Delivery Banner -->
+    <div class="row delivery-banner text-center">
+      <div class="col">
+        <h4 class="logo-font my-1"><i class="fas fa-truck"></i> Free delivery on orders over £{{ free_delivery_threshold }}!</h4>
       </div>
     </div>
   </header>
 
+  <!-- Messages -->
   {% if messages %}
     <div class="message-container">
       {% for message in messages %}
@@ -145,11 +136,13 @@
   {% block content %}{% endblock %}
 
   {% block postloadjs %}
-  <script type="text/javascript">
-    $('.toast').toast('show');
-    $('.alert').alert();
-  </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script>
+      $('.toast').toast('show');
+      $('.alert').alert();
+    </script>
   {% endblock %}
 </body>
-
 </html>
