--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -2,10 +2,12 @@
     <ul class="navbar-nav w-auto mx-auto">
         <!-- All Tools -->
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-tools-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font nav-link dropdown-toggle text-light mx-3 px-2"
+               href="#" id="all-tools-link" role="button" data-toggle="dropdown"
+               aria-haspopup="true" aria-expanded="false">
                 All Tools
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="all-tools-link">
+            <div class="dropdown-menu border-0 shadow-sm mt-1" aria-labelledby="all-tools-link">
                 <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
                 <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item">By Rating</a>
                 <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item">By Category</a>
@@ -15,10 +17,12 @@
 
         <!-- Power Tools -->
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="power-tools-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font nav-link dropdown-toggle text-light mx-3 px-2"
+               href="#" id="power-tools-link" role="button" data-toggle="dropdown"
+               aria-haspopup="true" aria-expanded="false">
                 Power Tools
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="power-tools-link">
+            <div class="dropdown-menu border-0 shadow-sm mt-1" aria-labelledby="power-tools-link">
                 <a href="{% url 'products' %}?category=drills" class="dropdown-item">Drills</a>
                 <a href="{% url 'products' %}?category=saws" class="dropdown-item">Saws</a>
                 <a href="{% url 'products' %}?category=sanders" class="dropdown-item">Sanders</a>
@@ -28,10 +32,12 @@
 
         <!-- Hand Tools -->
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="hand-tools-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font nav-link dropdown-toggle text-light mx-3 px-2"
+               href="#" id="hand-tools-link" role="button" data-toggle="dropdown"
+               aria-haspopup="true" aria-expanded="false">
                 Hand Tools
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="hand-tools-link">
+            <div class="dropdown-menu border-0 shadow-sm mt-1" aria-labelledby="hand-tools-link">
                 <a href="{% url 'products' %}?category=hammers" class="dropdown-item">Hammers & Striking Tools</a>
                 <a href="{% url 'products' %}?category=screwdrivers" class="dropdown-item">Screwdrivers</a>
                 <a href="{% url 'products' %}?category=wrenches_and_pliers" class="dropdown-item">Wrenches & Pliers</a>
