Add cache-busting version to base.css link

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,7 +8,7 @@ html, body {
     font-family: 'Lato', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #0B0F1A; /* Default fallback for home page */
+    background-color: #0B0F1A;
     color: #E0E0E0;
 }
 
