--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/75fa94fb6a.js" crossorigin="anonymous"></script>
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}?v=3">
   {% endblock %}
 
   {% block extra_css %}{% endblock %}
